--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -6,5 +6,33 @@
 </head>
 <body>
     <h1>Homemade Mac and Cheese</h1>
+    <img src="../images/mac.jpg" alt="mac and cheese picture">
+    <h2>Description</h2>
+    <p>
+        This classic baked mac and cheese recipe with a buttered bread crumb topping is creamy and comforting. 
+        <p> 
+            It's easy to make the cheese sauce from scratch on your stovetop, starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a rich, decadent sauce that coats every nook and cranny of the noodles. 
+        </p>
+        <p>
+             Serve this comfort-food macaroni and cheese casserole with grilled meats, sloppy Joes, fried chicken or alongside a salad for a meatless dinner.
+        </p>
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Macaroni</li>
+        <li>Butter</li>
+        <li>Flour</li>
+        <li>Milk</li>
+        <li>Cheese</li>
+        <li>Seasonings</li>
+        <li>Bread Crumbs</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><strong> Boil the noodles:</strong> Boil the macaroni in salted water until the noodles are al dente. Drain and transfer to a prepared baking dish.</li>
+        <li><strong> Make the cheese sauce:</strong> Melt butter, then whisk in the flour. Whisk in the milk, bring to a simmer, and stir in the cheeses. Season with salt and pepper and continue simmering until the sauce is thick. Pour the sauce over the noodles and stir.</li>
+        <li><strong> Make the topping:</strong> Melt two tablespoons of butter in a skillet, add the bread crumbs, and toast until the crumbs are brown. Spread the topping over the macaroni and cheese, then sprinkle with paprika.</li>
+        <li><strong> Bake the mac and cheese:</strong> Bake in the preheated oven until the topping is golden brown.</li>
+    </ol>
 </body>
 </html>
