--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/mac-n-cheese.html">Homemade Mac and Cheese</a>
+    <ul>
+   <li> <a href="./recipes/mac-n-cheese.html">Homemade Mac and Cheese</a> </li>
+   <li> <a href="./recipes/sweet-potato.html">Yummy Sweet Potato Casserole</a> </li>
+   <li><a href="./recipes/avocado.html">Avocado</a></li>
+    </ul>
 </body>
 </html>
